<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlDocActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView style="@style/themePrincipale.textTitle"
        android:id="@+id/txtTitleActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBlocNote"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnReturn"
            android:layout_below="@id/txtTitleActivity"
            android:text="@string/txtBtnReturn"
            android:layout_marginTop="@dimen/_Margin"
            android:layout_marginLeft="@dimen/margin"
            android:theme="@style/themePrincipale.btnMenu"
            android:layout_marginStart="@dimen/margin"
            android:background="@drawable/state_btn_menu"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_marginTop="@dimen/_Margin"
            android:layout_toRightOf="@id/btnReturn"
            android:layout_below="@+id/txtTitleActivity"
            android:text="@string/txtBtnSave"
            android:layout_marginLeft="@dimen/margin"
            android:theme="@style/themePrincipale.btnMenu"
            android:layout_marginStart="@dimen/margin"
            android:layout_toEndOf="@id/btnReturn"
            android:background="@drawable/state_btn_menu"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btnClear"
            android:layout_below="@+id/txtTitleActivity"
            android:layout_marginTop="@dimen/Size"
            android:layout_marginLeft="@dimen/_Margin"
            android:text="@string/txtChexBoxBold"
            android:textStyle="bold"
            android:id="@+id/checkBoxBold"
            android:layout_toEndOf="@+id/btnClear"
            android:layout_marginStart="@dimen/_Margin"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btnClear"
            android:layout_marginLeft="@dimen/_Margin"
            android:layout_below="@+id/checkBoxBold"
            android:text="@string/txtCheckBoxItalic"
            android:textStyle="italic"
            android:id="@+id/checkBoxItalic"
            android:layout_marginStart="@dimen/_Margin"
            android:layout_toEndOf="@+id/btnClear" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnClear"
            android:layout_below="@+id/txtTitleActivity"
            android:layout_marginTop="@dimen/_Margin"
            android:layout_toRightOf="@+id/btnSave"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/txtBtnClear"
            android:theme="@style/themePrincipale.btnMenu"
            android:background="@drawable/state_btn_menu"
            android:layout_toEndOf="@+id/btnSave"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/checkBoxItalic"
            android:layout_marginTop="@dimen/_Margin"
            android:id="@+id/editTxtMultiligne"
            android:inputType="textVisiblePassword"
            android:padding="@dimen/margin"
            android:hint="@string/txtEditPlain"
            android:background="@drawable/edit_cust"
            android:gravity="top"
            android:textColor="@color/black"
            android:textSize="@dimen/_Margin"
            android:autofillHints="no"
            tools:ignore="SpUsage"/>




    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>